# DSPM_DATA-Identification-Classification

./: README.md  docker-compose.yml
.github/workflows/: build-analyzer.yml  build-collector.yml
dspm-analyzer/: Dockerfile  app.py  build.gradle  requirements.txt  settings.gradle
dspm-analyzer/src/main/java/com/example/dspm/: DspmApplication.java
dspm-analyzer/src/main/java/com/example/dspm/domain/: Asset.java  AssetKind.java  DataObject.java  ObjectProfile.java  PseudonymizationGuard.java
dspm-analyzer/src/main/java/com/example/dspm/repo/: AssetRepository.java  DataObjectRepo.java  ObjectProfileRepo.java  PseudonymizationGuardRepo.java
dspm-analyzer/src/main/java/com/example/dspm/service/: AnalyzerService.java  AssetService.java
dspm-analyzer/src/main/java/com/example/dspm/web/: AnalyzerController.java  AssetController.java
dspm-analyzer/src/main/java/com/example/dspm/web/dto/: AssetDTO.java  AssetIn.java  BulkIn.java  CollectResp.java  MetaIn.java
dspm-analyzer/src/main/resources/: application.yml  schema.sql
dspm-collector/: Cargo.toml  Dockerfile  sample.csv
dspm-collector/src/: common.rs  ecr.rs  http.rs  main.rs  mock.rs  rds.rs  s3.rs  types.rs  utils.rs
dspm-collector/src/collector_core/: mod.rs
dspm-collector/src/collectors/: backup.rs  cloudtrail.rs  cloudwatch_logs.rs  containers_block_ml.rs  dynamodb.rs  ebs.rs  ec2.rs  ecr.rs  efs_fsx.rs  kinesis.rs  logs.rs  messaging.rs  mod.rs  opensearch.rs  rds.rs  s3.rs  security_meta.rs  sns.rs  sqs.rs
dspm-collector/src/mocks/: cloudwatch_describe_log_groups.json  dynamodb_list_tables.json  rds_describe_dbinstances.json  s3_list_buckets.json
