[package]
name = "dspm-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
once_cell = "1"

# 비동기 관련
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "full"] }
futures = "0.3"
async-trait = "0.1"

# 직렬화/역직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP 통신
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# AWS SDK
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-sdk-sts = "1"
aws-types = "1"
aws-sdk-rds = "1"
aws-sdk-dynamodb = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ecr = "1"
aws-sdk-cloudtrail = "1"
aws-sdk-sqs = "1"
aws-sdk-opensearch = "1"
aws-sdk-backup = "1"
aws-sdk-sns = "1"
aws-sdk-kinesis = "1"

# 로그/트레이싱
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
